--- a/README.adoc
+++ b/README.adoc
@@ -18,10 +18,25 @@ syslog.openlog("MyApp", logUser)  # optional
 syslog.info("Good news")
 syslog.debug("Psst")
 syslog(logAlert, "Alert!")
+
 syslog.closelog()  # optional
 ----
 
 Supported priorities: emerg, alert, crit, error, info, debug, notice, warn[ing]
+
+Only events with severity levels in the current mask are logged
+
+[source,nim]
+----
+let currentMask = getlogmask()
+
+let prevMask = setlogmask({ logAlert })
+syslog.debug("Psst")    # ignored
+syslog.alert("Alert!")  # logged
+discard setlogmask(prevMask)
+----
+
+Installation:
 
 [source,bash]
 ----
